@@ -22,11 +22,15 @@ package org.apache.iotdb.commons.udf.service;
 import org.apache.iotdb.common.rpc.thrift.Model;
 import org.apache.iotdb.commons.udf.UDFInformation;
 import org.apache.iotdb.commons.udf.UDFTable;
+import org.apache.iotdb.commons.udf.UDFType;
 import org.apache.iotdb.commons.udf.builtin.BuiltinAggregationFunction;
 import org.apache.iotdb.commons.udf.builtin.BuiltinScalarFunction;
 import org.apache.iotdb.commons.udf.builtin.BuiltinTimeSeriesGeneratingFunction;
+import org.apache.iotdb.commons.udf.builtin.relational.TableBuiltinAggregationFunction;
+import org.apache.iotdb.commons.udf.builtin.relational.TableBuiltinScalarFunction;
 import org.apache.iotdb.commons.utils.TestOnly;
 import org.apache.iotdb.udf.api.UDF;
+import org.apache.iotdb.udf.api.exception.UDFException;
 import org.apache.iotdb.udf.api.exception.UDFManagementException;
 import org.apache.iotdb.udf.api.relational.SQLFunction;
 
@@ -48,6 +52,19 @@ public class UDFManagementService {
   private UDFManagementService() {
     lock = new ReentrantLock();
     udfTable = new UDFTable();
+    // register tree model built-in functions
+    for (BuiltinTimeSeriesGeneratingFunction builtinTimeSeriesGeneratingFunction :
+        BuiltinTimeSeriesGeneratingFunction.values()) {
+      String functionName = builtinTimeSeriesGeneratingFunction.getFunctionName();
+      udfTable.addUDFInformation(
+          functionName,
+          new UDFInformation(
+              functionName.toUpperCase(),
+              builtinTimeSeriesGeneratingFunction.getClassName(),
+              UDFType.TREE_AVAILABLE));
+      udfTable.addFunctionAndClass(
+          Model.TREE, functionName, builtinTimeSeriesGeneratingFunction.getFunctionClass());
+    }
   }
 
   public void acquireLock() {
@@ -91,31 +108,33 @@ public class UDFManagementService {
     }
   }
 
-  private void checkIsBuiltInFunctionName(Model model, UDFInformation udfInformation)
+  public boolean checkIsBuiltInFunctionName(Model model, String functionName)
       throws UDFManagementException {
-    String functionName = udfInformation.getFunctionName();
-    String className = udfInformation.getClassName();
     if (Model.TREE.equals(model)) {
-      if (BuiltinAggregationFunction.getNativeFunctionNames().contains(functionName.toLowerCase())
+      return BuiltinAggregationFunction.getNativeFunctionNames()
+              .contains(functionName.toLowerCase())
           || BuiltinTimeSeriesGeneratingFunction.getNativeFunctionNames()
               .contains(functionName.toUpperCase())
-          || BuiltinScalarFunction.getNativeFunctionNames().contains(functionName.toLowerCase())) {
-        String errorMessage =
-            String.format(
-                "Failed to register UDF %s(%s), because the given function name conflicts with the built-in function name",
-                functionName, className);
-
-        LOGGER.warn(errorMessage);
-        throw new UDFManagementException(errorMessage);
-      }
+          || BuiltinScalarFunction.getNativeFunctionNames().contains(functionName.toLowerCase());
     } else {
-      // TODO: Table model UDF
+      return TableBuiltinScalarFunction.getBuiltInScalarFunctionName()
+              .contains(functionName.toLowerCase())
+          || TableBuiltinAggregationFunction.getBuiltInAggregateFunctionName()
+              .contains(functionName.toLowerCase());
     }
   }
 
   private void checkIfRegistered(Model model, UDFInformation udfInformation)
       throws UDFManagementException {
-    checkIsBuiltInFunctionName(model, udfInformation);
+    if (checkIsBuiltInFunctionName(model, udfInformation.getFunctionName())) {
+      String errorMessage =
+          String.format(
+              "Failed to register UDF %s(%s), because the given function name conflicts with the built-in function name",
+              udfInformation.getFunctionName(), udfInformation.getClassName());
+
+      LOGGER.warn(errorMessage);
+      throw new UDFManagementException(errorMessage);
+    }
     String functionName = udfInformation.getFunctionName();
     String className = udfInformation.getClassName();
     UDFInformation information = udfTable.getUDFInformation(model, functionName);
@@ -219,15 +238,12 @@ public class UDFManagementService {
               "Failed to reflect UDF instance, because UDF %s has not been registered.",
               functionName.toUpperCase());
       LOGGER.warn(errorMessage);
-      throw new RuntimeException(errorMessage);
+      throw new UDFException(errorMessage);
     }
 
     try {
       return clazz.cast(
-          udfTable
-              .getFunctionClass(Model.TREE, functionName)
-              .getDeclaredConstructor()
-              .newInstance());
+          udfTable.getFunctionClass(model, functionName).getDeclaredConstructor().newInstance());
     } catch (InstantiationException
         | InvocationTargetException
         | NoSuchMethodException
@@ -237,12 +253,16 @@ public class UDFManagementService {
               "Failed to reflect UDF %s(%s) instance, because %s",
               functionName, information.getClassName(), e);
       LOGGER.warn(errorMessage, e);
-      throw new RuntimeException(errorMessage);
+      throw new UDFException(errorMessage);
     }
   }
 
   public UDFInformation[] getUDFInformation(Model model) {
     return udfTable.getUDFInformationList(model).toArray(new UDFInformation[0]);
+  }
+
+  public UDFInformation getUDFInformation(Model model, String functionName) {
+    return udfTable.getUDFInformation(model, functionName);
   }
 
   @TestOnly
